--- a/app_one/templates/searchresult.html
+++ b/app_one/templates/searchresult.html
@@ -51,10 +51,14 @@
     </div>
         {% if recipes %}
             {% for recipe in recipes %}
-                <h1>{{ recipe.recipe_name }}</h1>
-                <p>{{ recipe.recipe_description }}</p>
-                <img src="/media/{{ recipe.photo }}" style="height: 100px; width: 100px;" alt="">
-                <a href="/recipe/{{ recipe.id }}"><button>View more</button></a>
+                <div class="row">
+                    <img class="col-5" src="/media/{{ recipe.photo }}"  alt="">
+                    <div class="col-5">
+                        <h1>{{ recipe.recipe_name }}</h1>
+                        <p>{{ recipe.recipe_description }}</p>
+                        <a href="/recipe/{{ recipe.id }}"><button>View more</button></a>
+                    </div>
+                </div>
                 <hr>
             {% endfor %}
          {% else %}
